# andersan-grid

./: .gitignore  API_DESIGN.md  Makefile  README.md  pyproject.toml
andersan_grid/: __init__.py  api_client.py  cli.py  grid.py  plotting.py
andersan_grid/interpolators/: __init__.py  _gpr.py  _linear.py  _tps.py
docs/: grid_api_spec.md
